--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@
 
 
 
-
+/* Inicio do Cabeçalho  */
 
 header {
     background-color: rgb(14, 14, 48);
@@ -42,3 +42,45 @@ nav a:hover {
     border-radius: 5px;
     
 }
+
+
+/* Fim di Cabeçalho */
+
+
+
+
+
+
+/* Conteúdo */
+
+
+main {
+    background-color: #F7F7F7 ;
+}
+
+article > h1 {
+    padding: 10px;
+    margin: auto;
+    text-align: center;
+}
+
+
+article p {
+    padding: 10px;
+}
+
+article {
+    background-color: white;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
+    padding: 20px;
+    margin: 40px auto;
+    max-width: 800px;
+    border-radius: 10px;
+}
+
+
+
+
+
